skaffold/hashi-demo/deploy.hashi-app-istio.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: application
  labels:
    app: application
spec:
  selector:
    app: application
  ports:
  - name: http
    port: 5000
    targetPort: 5000
    protocol: TCP

---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: application
  labels:
    app: application
spec:
  host: application.hashi-demo.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
  - name: v1
    labels:
      app: application
      version: v1
  - name: v2
    labels:
      app: application
      version: v2

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: application
  labels:
    app: application
spec:
  hosts:
  - application.hashi-demo.svc.cluster.local
  gateways:
  - mesh
  http:
  - route:
    - destination:
        host: application.hashi-demo.svc.cluster.local
        subset: v1
        port:
          number: 5000
      weight: 90
    - destination:
        host: application.hashi-demo.svc.cluster.local
        subset: v2
        port:
          number: 5000
      weight: 10
    timeout: 60s
    retries:
      attempts: 3
      perTryTimeout: 5s
      retryOn: gateway-error,connect-failure,refused-stream
