skaffold/hashi-demo/deploy.hashi-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application
  labels:
    app: application
    version: v1
spec:
  selector:
    matchLabels:
      app: application
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: application
        version: v1
      annotations:
        kubernetes.io/change-cause: "001"
    spec:
      serviceAccountName: application
      containers:
      - name: application
        image: notebook.local:5000/hashi-demo/hashi-demo-app:1.0.0
        ports:
        - name: application
          containerPort: 5000
        resources:
          requests:
            cpu: 256m
            memory: 256M
          limits:
            cpu: 256m
            memory: 256M
        readinessProbe:
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 15
          httpGet:
            path: /api/probe
            port: application
        livenessProbe:
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 15
          httpGet:
            path: /api/probe
            port: application

---
apiVersion: v1
kind: Service
metadata:
  name: application
  labels:
    app: application
spec:
  selector:
    app: application
  ports:
  - name: http
    port: 5000
    targetPort: 5000
    protocol: TCP

---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: application
  labels:
    app: application
spec:
  host: application.hashi-demo.svc.cluster.local
  subsets:
  - name: v1
    labels:
      app: application
      version: v1

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: application
  labels:
    app: application
spec:
  hosts:
  - application.hashi-demo.svc.cluster.local
  gateways:
  - mesh
  http:
  - route:
    - destination:
        host: application.hashi-demo.svc.cluster.local
        subset: v1
        port:
          number: 5000
    timeout: 60s
    retries:
      attempts: 3
      perTryTimeout: 5s
      retryOn: gateway-error,connect-failure,refused-stream
