skaffold/hashi-demo/deploy.hashi-data.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data
  labels:
    app: data
    version: v1
spec:
  selector:
    matchLabels:
      app: data
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: data
        version: v1
      annotations:
        kubernetes.io/change-cause: "001"
    spec:
      volumes:
      - name: hashi-demo
        persistentVolumeClaim:
          claimName: hashi-demo
      containers:
      - name: data
        image: notebook.local:5000/hashi-demo/hashi-demo-data:1.0.0
        volumeMounts:
        - name: hashi-demo
          mountPath: /database
        ports:
        - name: data
          containerPort: 5432
        resources:
          requests:
            cpu: 256m
            memory: 256M
          limits:
            cpu: 256m
            memory: 256M
        readinessProbe:
          initialDelaySeconds: 15
          periodSeconds: 5
          timeoutSeconds: 15
          exec:
            command: ["psql", "-w", "-U", "postgres", "-d", "posts", "-c", "SELECT 1"]
        livenessProbe:
          initialDelaySeconds: 15
          periodSeconds: 5
          timeoutSeconds: 15
          exec:
            command: ["psql", "-w", "-U", "postgres", "-d", "posts", "-c", "SELECT 1"]

---
apiVersion: v1
kind: Service
metadata:
  name: data
  labels:
    app: data
spec:
  selector:
    app: data
  ports:
  - name: tcp
    port: 5432
    targetPort: 5432
    protocol: TCP

---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: data
  labels:
    app: data
spec:
  host: data.hashi-demo.svc.cluster.local
  subsets:
  - name: v1
    labels:
      app: data
      version: v1

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: data
  labels:
    app: data
spec:
  hosts:
  - data.hashi-demo.svc.cluster.local
  gateways:
  - mesh
  tcp:
  - route:
    - destination:
        host: data.hashi-demo.svc.cluster.local
        subset: v1
        port:
          number: 5432
