skaffold/hashi-demo/deploy.hashi-app-istio-policy.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: application
spec:
  selector:
    matchLabels:
      app: application
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/hashi-demo/sa/presentation"]
    to:
    - operation:
        ports: ["5000"]
