skaffold/hashi-demo/deploy.hashi-web-istio-policy.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: presentation
spec:
  selector:
    matchLabels:
      app: presentation
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"]
    to:
    - operation:
        ports: ["80"]
