skaffold/hashi-demo/deploy.hashi-web-istio.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: presentation
  labels:
    app: presentation
spec:
  selector:
    app: presentation
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP

---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: presentation
  labels:
    app: presentation
spec:
  host: presentation.hashi-demo.svc.cluster.local
  subsets:
  - name: v1
    labels:
      app: presentation
      version: v1

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: presentation
  labels:
    app: presentation
spec:
  hosts:
  - presentation.hashi-demo.svc.cluster.local
  - hashi-demo.example.com
  gateways:
  - hashi-demo
  - mesh
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: presentation.hashi-demo.svc.cluster.local
        subset: v1
        port:
          number: 80
    timeout: 60s
    retries:
      attempts: 3
      perTryTimeout: 5s
      retryOn: gateway-error,connect-failure,refused-stream

---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: presentation
spec:
  selector:
    matchLabels:
      app: presentation
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"]
    to:
    - operation:
        ports: ["80"]
